# my-ai-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SKIP_HEALTH_CHECK_FEATURE.md  docker-compose.yml  test_tokens.py  token_test_results.json  需求文档.md
.github/workflows/: build-nginx.yml  docker.yml
.monkeycode/: MEMORY.md
.monkeycode/specs/2026-03-17-detailed-call-logs/: design.md
backend/: auth.py  auth_admin.py  database.py  health_checker.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/routers/: auth.py  client_keys.py  logs.py  providers.py  proxy.py  stats.py
backend/services/: anthropic_service.py  openai_service.py
backend/utils/: sanitizer.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: DocsPage.tsx  KeysPage.tsx  LoginPage.tsx  LogsPage.tsx  ProvidersPage.tsx  StatsPage.tsx
nginx/: Dockerfile  nginx.conf
