[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography==44.0.0",
    "fastapi==0.115.5",
    "httpx==0.28.0",
    "pydantic==2.10.3",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.32.1",
]
